--- a/ps.html
+++ b/ps.html
@@ -34,10 +34,10 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">Hakkımızda</a>
+                                <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -128,7 +128,7 @@
                 <img src="resim/god of war.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">God Of War</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
