--- a/xbox.html
+++ b/xbox.html
@@ -34,10 +34,10 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">Hakkımızda</a>
+                                <a class="nav-link" aria-current="page" href="hakkımızda.html">Hakkımızda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">İletişim</a>
+                                <a class="nav-link" href="iletişim.html">İletişim</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
