--- a/macera.html
+++ b/macera.html
@@ -94,7 +94,7 @@
           <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="resim/rdr2.jpg" class="d-block w-100">
+                  <img src="resim/horizon.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
                   <img src="resim/witcher.jpg" class="d-block w-100">
