--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -112,7 +112,7 @@
                   <img src="resim/calisto.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/rdr2.jpg" class="d-block w-100">
+                  <img src="resim/dying light.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
