--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img src="resim/god of war.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="resim/alien.jpg" class="d-block w-100">
+            <img src="resim/doom ethernal.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
             <img src="resim/call of duty.jpg" class="d-block w-100">
